// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowButton applies active styling if provided 1`] = `
.c0 {
  min-width: 28px;
}

<OverflowButton
  active={true}
>
  <OverflowButton__StyledOverflowButton
    active={true}
    focused={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      className="c-table__row__cell__overflow is-active c0"
      data-garden-id="tables.overflow_button"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
       
    </button>
  </OverflowButton__StyledOverflowButton>
</OverflowButton>
`;

exports[`OverflowButton applies default styling by default 1`] = `
.c0 {
  min-width: 28px;
}

<OverflowButton>
  <OverflowButton__StyledOverflowButton
    focused={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      className="c-table__row__cell__overflow c0"
      data-garden-id="tables.overflow_button"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
       
    </button>
  </OverflowButton__StyledOverflowButton>
</OverflowButton>
`;

exports[`OverflowButton applies focused styling if provided 1`] = `
.c0 {
  min-width: 28px;
}

<OverflowButton
  focused={true}
>
  <OverflowButton__StyledOverflowButton
    focused={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      className="c-table__row__cell__overflow is-focused c0"
      data-garden-id="tables.overflow_button"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
       
    </button>
  </OverflowButton__StyledOverflowButton>
</OverflowButton>
`;

exports[`OverflowButton applies hovered styling if provided 1`] = `
.c0 {
  min-width: 28px;
}

<OverflowButton
  hovered={true}
>
  <OverflowButton__StyledOverflowButton
    focused={false}
    hovered={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      className="c-table__row__cell__overflow is-hovered c0"
      data-garden-id="tables.overflow_button"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
       
    </button>
  </OverflowButton__StyledOverflowButton>
</OverflowButton>
`;
